packages/shulker-operator/src/reconcilers/minecraft_server/snapshots/shulker_operator__reconcilers__minecraft_server__config_map__paper__tests__from_spec.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server/config_map.rs
expression: config
---
proxies:
  bungee-cord:
    online-mode: false
  velocity:
    enabled: true
    online-mode: true
    secret: "${CFG_VELOCITY_FORWARDING_SECRET}"
misc:
  enable-nether: true

